--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -56,6 +56,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "tailwindcss": "^3.0.23"
   }
 }
